src/test/resources/30/expanded/valid/nav-page-list-reading-order/OPS/content_002.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en"
	lang="en">
	<head>
		<title>Minimal EPUB</title>
	</head>
	<body epub:type="bodymatter">
		<div id="p4" epub:type="pagebreak" role="doc-pagebreak">4</div>
		<h2 id="ch4">The Counterpane</h2>
		<p>Upon waking next morning about daylight…</p>
	</body>
</html>
