src/test/resources/30/expanded/invalid/switch-missing-property/OPS/content_001.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en" lang="en">
	<head>
		<title>Minimal EPUB</title>
	</head>
	<body epub:type="bodymatter">
		<h1>Loomings</h1>
		<p>Call me Ishmael.</p>
		<epub:switch id="cmlSwitch">
			<epub:case required-namespace="http://www.xml-cml.org/schema">
				<cml xmlns="http://www.xml-cml.org/schema">
					<molecule id="sulfuric-acid">
						<formula id="f1" concise="H 2 S 1 O 4"></formula>
					</molecule>
				</cml>
			</epub:case>
			
			<epub:default>
				<p>H<sub>2</sub>SO<sub>4</sub></p>
			</epub:default>
		</epub:switch>
	</body>
</html>
